Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124790

QtWebengine 6.8 (dev) doesn't render with basic html files

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.7.1, 6.7.2, 6.8.0 FF
    • 6.8
    • WebEngine
    • None
    • Linux/Wayland
    • 363cf5a13 (6.7.1), a1c008f09 (dev), 1a86f0598 (6.7)

      With a basic QML QtWebengine app, the webengine doesn't render anything and I get the following output in the console. This is with QtWebengine compiled from dev (6a5a1f7f3153c155b13efe01d1c470823bf9bbdf) . I also observe the same things with some QtWidgets/KDE apps like KMail. Previous builds from a few months ago were working fine, unfortunately bisecting the issue with webengine is a bit tricky on my laptop.


       

      [22870:7:0426/113123.284582:FATAL:picture_layer_tiling.cc(480)] Check failed: tile_i_ < tiling_->tiling_data_.num_tiles_x() (0 vs. 0)

      #0 0x7f2036277e69 base::debug::CollectStackTrace()
      #1 0x7f203623f41c base::debug::StackTrace::StackTrace()
      #2 0x7f203623f3d2 base::debug::StackTrace::StackTrace()
      #3 0x7f2036003dff logging::LogMessage::~LogMessage()
      #4 0x7f203600e64e logging::(anonymous namespace)::DCheckLogMessage::~DCheckLogMessage()
      #5 0x7f203600e66a logging::(anonymous namespace)::DCheckLogMessage::~DCheckLogMessage()
      #6 0x7f203600efc9 logging::CheckError::~CheckError()
      #7 0x7f2038ce52fb cc::PictureLayerTiling::CoverageIterator::operator++()
      #8 0x7f2038ce517a cc::PictureLayerTiling::CoverageIterator::CoverageIterator()
      #9 0x7f2038ceacd8 cc::PictureLayerTilingSet::CoverageIterator::operator++()
      #10 0x7f2038cea569 cc::PictureLayerTilingSet::CoverageIterator::CoverageIterator()
      #11 0x7f2038bdfc7a cc::PictureLayerImpl::AppendQuads()
      #12 0x7f2038d85ada cc::LayerTreeHostImpl::CalculateRenderPasses()
      #13 0x7f2038d87317 cc::LayerTreeHostImpl::PrepareToDraw()
      #14 0x7f2038e1c915 cc::ProxyImpl::DrawInternal()
      #15 0x7f2038e1b0a5 cc::ProxyImpl::ScheduledActionDrawIfPossible()
      #16 0x7f2038e936f0 cc::Scheduler::DrawIfPossible()
      #17 0x7f2038e9447e cc::Scheduler::ProcessScheduledActions()
      #18 0x7f2038e93554 cc::Scheduler::OnBeginImplFrameDeadline()
      #19 0x7f2038ecbc41 base::internal::FunctorTraits<>::Invoke<>()
      #20 0x7f2038ec771e base::internal::InvokeHelper<>::MakeItSo<>()
      #21 0x7f2038ec2dfa base::internal::Invoker<>::RunImpl<>()
      #22 0x7f2038ebe1de base::internal::Invoker<>::RunOnce()
      #23 0x7f202a00a478 base::OnceCallback<>::Run()
      #24 0x7f20361fb4b0 base::DeadlineTimer::OnScheduledTaskInvoked()
      #25 0x7f20361ffb26 base::internal::FunctorTraits<>::Invoke<>()
      #26 0x7f20361ff63c base::internal::InvokeHelper<>::MakeItSo<>()
      #27 0x7f20361ff105 base::internal::Invoker<>::RunImpl<>()
      #28 0x7f20361fe98d base::internal::Invoker<>::Run()
      #29 0x7f202a00a478 base::OnceCallback<>::Run()
      #30 0x7f2036135390 base::TaskAnnotator::RunTaskImpl()
      #31 0x7f2036189096 base::TaskAnnotator::RunTask<>()
      #32 0x7f2036181e54 base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl()
      #33 0x7f2036181335 base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork()
      #34 0x7f203604f1a2 base::MessagePumpDefault::Run()
      #35 0x7f20361827b2 base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::Run()
      #36 0x7f20360da231 base::RunLoop::Run()
      #37 0x7f203486614f blink::scheduler::NonMainThreadImpl::SimpleThreadImpl::Run()
      #38 0x7f20361d9e40 base::SimpleThread::ThreadMain()
      #39 0x7f2036227556 base::(anonymous namespace)::ThreadFunc()
      #40 0x7f20268ac897 start_thread
      #41 0x7f2026933674 {}GI{}_clone
      Task trace:
      #0 0x7f2038e9334b cc::Scheduler::ScheduleBeginImplFrameDeadline()
      #1 0x7f20387ebdb3 cc::UniqueNotifier::Schedule()
      #2 0x7f2038d02f31 cc::(anonymous namespace)::TaskSetFinishedTaskImpl::TaskSetFinished()
      #3 0x7f2038c88ebc cc::CategorizedWorkerPoolJob::Start()

      [22782:22782:0426/113126.950808:INFO:web_contents_delegate_qt.cpp(282)] ProcessGone: 3 (133)

        For Gerrit Dashboard: QTBUG-124790
        # Subject Branch Project Status CR V

            pvarga Peter Varga
            carl Carl Schwan
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes