Make sure to create QOffscreenSurface on the main thread for EGL

Also store if dma-buf creation was successful to avoid to switch
OpenGL contexts unnecessarily.

Fixes: QTBUG-124790
Fixes: QTBUG-124635
Change-Id: I14607a3d6317568c43dee9671da78192516b23d5
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit 363cf5a13fdfa51d345ca2538daeb37941b5a528)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a1c008f09465e53d7ac04969ffac85ce2227806d)